--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*-- colors & font variables --*/
 :root{
-   font-family: Inter;
+   font-family: "Inter" , sans-serif;
    --c-Green: hsl(75, 94%, 57%);
    --c-White: hsl(0, 0%, 100%);
    --c-Grey700: hsl(0, 0%, 20%);
@@ -15,13 +15,13 @@ body{
    background-color: var(--c-Grey900);
    align-items: center;
    justify-content: center;
-   line-height: 1.6;
+   line-height: 1.5;
 }
 /*--container --*/
 .container{
    display: flex;
    flex-direction: column;
-   max-width: 300px;
+   max-width: min(90% , 375px);
    background-color: var(--c-Grey800);
    border-radius:10px;
    align-items: center;
@@ -29,19 +29,19 @@ body{
    padding-bottom: 20px;
 }
 .container h1{
-   font-size: 20px;
-   font-weight: 500;
+   font-size: 22px;
+   font-weight: 700;
    color: var(--c-White);
    margin: 0;
 }
 .container span{
-   font-size: 12px;
+   font-size: 14px;
    font-weight: 400;
    color: var(--c-Green);
    padding-top: 2px;
 }
 .container p{
-   font-size: 12px;
+   font-size: 14px;
    font-weight: 400;
    color: var(--c-White);
    padding: 3px;
@@ -53,22 +53,25 @@ body{
    width: 72px;
    height: 72px;
 }
-/*-- button --*/
-.buttonStyle{
+/*-- link --*/
+.linkStyle{
+   display: block;
+   text-align: center;
+   text-decoration: none;
    color: var(--c-White);
    background-color: var(--c-Grey700);
-   font-size: 12px;
+   font-size: 14px;
    font-weight: 600;
-   padding: 10px;
+   padding: 12px;
    border-radius: 5px;
    border-style: none;
    width: 80%;
    margin-bottom: 12px;
 }
-.buttonStyle:hover{
+.linkStyle:hover{
    background-color: var(--c-Green);
    color: var(--c-Grey700);
 }
 /*-- footer --*/
-   .attribution { font-size: 11px; color: var(--c-White); text-align: center; margin-top: 20px; }
+   .attribution { font-size: 12px; color: var(--c-White); text-align: center; margin-top: 20px; }
    .attribution a { color: hsl(228, 45%, 44%); }
