--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
    border-radius:10px;
    align-items: center;
    justify-content: center;
-   padding-bottom: 20px;
+   padding: 0 5px 20px 5px;
 }
 .container h1{
    font-size: 22px;
